force-app/main/default/objects/Affected_Market_Identifier__c/Affected_Market_Identifier__c.object-meta.xml
<CustomObject>
    <label>Affected Market Identifier</label>
    <nameField>
        <label>Affected Market Identifier</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Affected Market Identifiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>