force-app/main/default/objects/Affected_Market_Identifier__c/fields/Incident_Sync__c.field-meta.xml
<CustomField>
    <fullName>Incident_Sync__c</fullName>
    <formula>CASE(
	TEXT(uom_Incident__r.Status),
	&apos;Restored&apos;,  IF(TEXT(uom_Status__c) == &apos;Restored&apos;,  &apos;Synchronised&apos;, &apos;Out of Sync&apos;),
	&apos;Cancelled&apos;, IF(TEXT(uom_Status__c) == &apos;Cancelled&apos;, &apos;Synchronised&apos;, &apos;Out of Sync&apos;),
	&apos;Merged&apos;,    IF(TEXT(uom_Status__c) == &apos;Merged&apos;,    &apos;Synchronised&apos;, &apos;Out of Sync&apos;),
	IF(TEXT(uom_Status__c) != &apos;In Progress&apos;, &apos;Out of Sync&apos;, &apos;Synchronised&apos;)
)</formula>
    <label>Incident Sync</label>
    <type>Text</type>
</CustomField>