force-app/main/default/objects/Affected_Market_Identifier__c/fields/IncidentIdText__c.field-meta.xml
<CustomField>
    <fullName>IncidentIdText__c</fullName>
    <label>Incident Id Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>