force-app/main/default/objects/Affected_Market_Identifier__c/fields/Last_Message_Sent_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Message_Sent_Time__c</fullName>
    <label>Last Message Sent Time</label>
    <type>DateTime</type>
</CustomField>