force-app/main/default/objects/Affected_Market_Identifier__c/fields/Multi_Incident__c.field-meta.xml
<CustomField>
    <fullName>Multi_Incident__c</fullName>
    <label>Multi-Incident Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Incident</fullName>
                <default>true</default>
                <label>Single Incident</label>
            </value>
            <value>
                <fullName>Multi-Incident (First)</fullName>
            </value>
            <value>
                <fullName>Multi-Incident (Subsequent)</fullName>
            </value>
            <value>
                <fullName>Recheck</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>