force-app/main/default/objects/Affected_Market_Identifier__c/fields/NMI_Length__c.field-meta.xml
<CustomField>
    <fullName>NMI_Length__c</fullName>
    <formula>LEN(Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NMI Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>