force-app/main/default/objects/Affected_Market_Identifier__c/fields/NMI_Match_Note__c.field-meta.xml
<CustomField>
    <fullName>NMI_Match_Note__c</fullName>
    <label>NMI Match Notes</label>
    <type>TextArea</type>
</CustomField>