force-app/main/default/objects/Affected_Market_Identifier__c/fields/NMI_Match_Outcome__c.field-meta.xml
<CustomField>
    <fullName>NMI_Match_Outcome__c</fullName>
    <label>NMI Match Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NMI Matched</fullName>
            </value>
            <value>
                <fullName>NMI Not Matched</fullName>
            </value>
            <value>
                <fullName>Customer Matched</fullName>
            </value>
            <value>
                <fullName>Customer Not Matched: None Found</fullName>
            </value>
            <value>
                <fullName>Customer Not Matched: Multiple Found</fullName>
            </value>
            <value>
                <fullName>Customer Matched: Already On Incident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>