force-app/main/default/objects/Affected_Market_Identifier__c/fields/Number_of_Emails_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Emails_Delivered__c</fullName>
    <formula>Number_of_Emails_Sent__c  +  Number_of_Emails_Opened__c  +  Number_of_Emails_Clicked__c  +  Number_of_Emails_Unsubscribed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Emails Delivered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>