force-app/main/default/objects/Affected_Market_Identifier__c/fields/Number_of_Emails_Opened__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Emails_Opened__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Emails Opened</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>