force-app/main/default/objects/Affected_Market_Identifier__c/fields/Number_of_Emails_Undelivered__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Emails_Undelivered__c</fullName>
    <formula>Number_of_Emails_Bounced__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Emails Undelivered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>