force-app/main/default/objects/Affected_Market_Identifier__c/fields/SupplyGuaranteeReason1__c.field-meta.xml
<CustomField>
    <fullName>SupplyGuaranteeReason1__c</fullName>
    <formula>TEXT(uom_Service_Point__r.vlocity_cmt__PremisesId__r.vlocity_cmt__SupplyGuaranteeReason__c)</formula>
    <label>Supply Guarantee Reason</label>
    <type>Text</type>
</CustomField>