force-app/main/default/objects/Affected_Market_Identifier__c/fields/Total_Number_of_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Notifications__c</fullName>
    <formula>Total_Number_of_SMSs__c  +  Total_Number_of_Emails__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Number of Notifications</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>