force-app/main/default/objects/Affected_Market_Identifier__c/fields/uom_Incident__c.field-meta.xml
<CustomField>
    <fullName>uom_Incident__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Incident</label>
    <referenceTo>Incident</referenceTo>
    <relationshipLabel>Affected Market Identifiers</relationshipLabel>
    <relationshipName>Affected_Market_Identifiers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>