force-app/main/default/objects/Affected_Market_Identifier__c/fields/uom_Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>uom_Processing_Status__c</fullName>
    <label>Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To be processed</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>