force-app/main/default/objects/Affected_Market_Identifier__c/fields/uom_Service_Account__c.field-meta.xml
<CustomField>
    <fullName>uom_Service_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Affected Market Identifiers</relationshipLabel>
    <relationshipName>Affected_Market_Identifiers</relationshipName>
    <type>Lookup</type>
</CustomField>