force-app/main/default/objects/Affected_Market_Identifier__c/fields/uom_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>uom_Status_Code__c</fullName>
    <label>Status Code</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PRED</fullName>
                <default>true</default>
                <label>PRED</label>
            </value>
            <value>
                <fullName>COMP</fullName>
            </value>
            <value>
                <fullName>DEAD</fullName>
            </value>
            <value>
                <fullName>DELG</fullName>
            </value>
            <value>
                <fullName>PLAN</fullName>
            </value>
            <value>
                <fullName>REST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>