force-app/main/default/objects/Affected_Market_Identifier__c/fields/uom_SupplyGuaranteeReason__c.field-meta.xml
<CustomField>
    <fullName>uom_SupplyGuaranteeReason__c</fullName>
    <description>Field to be deprecated.</description>
    <label>Supply Guarantee Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Life Support</fullName>
            </value>
            <value>
                <fullName>Sensitive Load</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>