force-app/main/default/objects/Affected_Market_Identifier__c/fields/uom_Unique_Market_Identifier__c.field-meta.xml
<CustomField>
    <fullName>uom_Unique_Market_Identifier__c</fullName>
    <externalId>true</externalId>
    <label>Unique Market Identifier</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>